Interactive code-editor: use 45em fixed height
Codemirror still shows a doubled vertical scrollbar.

Example:
http://lab.dev.concord.org/examples/interactives/interactives.html#interactives/gravitational-field-test.json

--- a/src/examples/interactives/interactives.sass
+++ b/src/examples/interactives/interactives.sass
@@ -36,8 +36,7 @@
   padding: 0.5em 0.5em 0.5em 0em
 
 .CodeMirror-scroll
-  min-height: 30em
-  max-height: 60em
+  height: 45em
   overflow: auto
 
 .interactive-top
